<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <ImageView
        android:id="@+id/openGalleryButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_photo_camera_back_24"
        android:layout_gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/productNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/productNameEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/productNameEdt"/>

        <EditText
            android:id="@+id/productNameEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_product_name"
            android:textSize="16sp"
            android:layout_margin="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/productNameTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/productTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/productTypeEdt"
            app:layout_constraintBottom_toBottomOf="@id/productTypeEdt"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/productTypeEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_category"
            android:layout_margin="10dp"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/productTypeTitle"
            app:layout_constraintTop_toBottomOf="@id/productNameEdt"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/productPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/productPriceEdt"
            app:layout_constraintBottom_toBottomOf="@id/productPriceEdt"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/productPriceEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_price"
            android:layout_margin="10dp"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/productPriceTitle"
            app:layout_constraintTop_toBottomOf="@id/productTypeEdt"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/productTaxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_tax"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/productTaxEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/productTaxEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_product_tax"
            android:layout_margin="10dp"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/productTaxTitle"
            app:layout_constraintTop_toBottomOf="@id/productPriceEdt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>